<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/backblue"
    tools:context="com.example.teaninnovators.LoginActivity"
    >

    <ImageView
        android:id="@+id/logInLogoImage"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/img"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:layout_marginHorizontal="4dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:textColor="@color/textColor"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:background="@color/white"
                android:paddingHorizontal="14dp"
                android:elevation="3dp"
                android:layout_marginLeft="3dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="3dp"
                android:maxLength="3"
                android:id="@+id/logPhonStart"
                android:layout_marginRight="10dp"
                android:text="+91"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/logNum"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:elevation="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:maxLength="10"
                android:paddingVertical="15dp"
                android:hint="@string/_99xxxxxxxx"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:ems="10"
                />
        </LinearLayout>







        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/logPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/forgotPasswordOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="right"
            android:textSize="15sp"
            android:textColor="@color/RedColor"/>

    </LinearLayout>

    <Button
        android:id="@+id/logBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/greenbackground"
        android:text="@string/log_in"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:padding="10dp" />

</LinearLayout>