<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:padding="20dp"
    tools:context="com.example.teaninnovators.fragments.PostJobFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:srcCompat="@drawable/applogo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginHorizontal="3dp"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="POST THE JOB"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:layout_marginBottom="18dp"
            android:textStyle="bold"/>



        <EditText
            android:id="@+id/JobTitlePos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginHorizontal="3dp" android:textColorHint="@color/black" android:ems="10" android:background="@color/white"
            android:layout_marginBottom="12dp"
            android:elevation="3dp" android:padding="15dp" android:textColor="@color/black" android:inputType="textPersonName" android:hint="@string/job_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/jobSkillsReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="3dp" android:textColorHint="@color/black" android:ems="10" android:background="@color/white" android:elevation="3dp" android:padding="15dp" android:textColor="@color/black" android:inputType="textPersonName" android:hint="@string/skills" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>


        <EditText
            android:id="@+id/jobRatingsReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="3dp"
            android:ems="10"
            android:layout_marginBottom="24dp"
            android:background="@color/white"

            android:padding="15dp" android:hint="@string/ratings" android:inputType="textPersonName" android:textColor="@color/black" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/jobSkillsReq"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/jobWages"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="12dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/wages"
                android:inputType="textPersonName"

                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobRatingsReq" />
            <EditText
                android:id="@+id/jobDuration"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="12dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/duration"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobRatingsReq" />
        </LinearLayout>
    </LinearLayout>

    <Button android:id="@+id/btnPostJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/light_blue_circle"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/inputBack"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPincode"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

</LinearLayout>