<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:padding="20dp"
    tools:context="com.example.teaninnovators.SignUpDetailsActivity"
    >

    <ImageView
        android:id="@+id/signUpLogo"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:padding="15dp"
        app:srcCompat="@drawable/applogo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginHorizontal="3dp"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Name" android:textStyle="bold" android:paddingHorizontal="5dp" android:layout_marginTop="20dp" android:textColor="@color/black"/>

        <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:textColorHint="@color/black"
            android:ems="10"
            android:background="@color/white"
            android:elevation="3dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="Enter your Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="Mobile No." android:textStyle="bold" android:paddingHorizontal="5dp" android:layout_marginTop="10dp" android:textColor="@color/black"/>

        <EditText
            android:id="@+id/regMobileNo"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="3dp" android:textColorHint="@color/black" android:layout_marginHorizontal="3dp" android:ems="10" android:background="@color/white" android:padding="15dp" android:hint="Enter your number" android:inputType="textEmailAddress" android:textColor="@color/black" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/regName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/password" android:textStyle="bold" android:paddingHorizontal="5dp" android:layout_marginTop="10dp" android:textColor="@color/black"/>

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="2dp"
            android:elevation="3dp"
            android:hint="@string/enter_your_password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regMobileNo"/>

    </LinearLayout>

    <Button android:id="@+id/regBtnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/greenbackground"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regMobileNo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/already_have_an_account"
            android:textStyle="bold"
            android:textSize="15sp"

            />
        <TextView
            android:id="@+id/signInOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textSize="15sp"
            android:textColor="@color/RedColor"
            android:textStyle="bold"


            />


    </LinearLayout>

</LinearLayout>