<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backpur"
    android:padding="20dp"
    tools:context="com.example.teaninnovators.WelcomeActivity"
    >

    <ImageView
        android:id="@+id/imageWelcomeLogo"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:padding="15dp"
        app:srcCompat="@drawable/img"/>
    <ImageView
        android:id="@+id/imageWelcome"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:srcCompat="@drawable/img_1"/>
    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"

        android:textAlignment="center"

        android:textColor="@color/textColor"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/selectLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="Select Language"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_marginHorizontal="3dp"
            android:background="@color/white"
            android:elevation="6dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/englishSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                app:srcCompat="@drawable/img_2"/>

            <TextView
                android:id="@+id/englishText"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_marginHorizontal="3dp"
            android:background="@color/white"
            android:elevation="6dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/hindiSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img_3"/>

            <TextView
                android:id="@+id/hindiText"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>







</LinearLayout>